--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -12,7 +12,7 @@
       "architect": {
         "serve": {
           "options": {
-              "proxyConfig": "proxy.conf.json"
+              "proxyConfig": "proxy.config.json"
           }},
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
